[tool.poetry]
name = "cs520-patient-tracker"
version = "0.1.0"
description = ""
authors = ["Patrick Walsh <pw4.2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pymongo = {extras = ["srv"], version = "^4.6.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
